# Myprojects

./: Jenkinsfile  jenkinsfile
Algorithm Design - Python/: Lab01.py  mylist.py  name.py  name.txt
Algorithm Design - Python/Binary_Search/: advanced_search.py
Algorithm Design - Python/Francois/: francois.py
Algorithm Design - Python/Lab01/: Lab01.py
C#/: README.md
C++/: README.md
C++/Designing DataStructures/Priority_queue/: CMakeLists.txt  priority_queue.h  testPriorityQueue  testPriorityQueue.h  testSpy  testVector.h  vector.h
C++/Designing DataStructures/Priority_queue/LabPriorityQueue.xcodeproj/project.xcworkspace/xcuserdata/marvian.xcuserdatad/: UserInterfaceState.xcuserstate
C++/Designing DataStructures/Priority_queue/LabPriorityQueue.xcodeproj/xcuserdata/marvian.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Java/: SubArraySorting.java  example.java
Java Networking/: README.md
MYSQL/: UniversityQueries.sql  tasm.mwb  university.sql  university_erd.mwb  university_erd.mwb.bak  university_queries.sql
PL:SQL/: oracle_lab10.sql  oracle_lab2.sql  oracle_lab6.sql  oracle_lab7.sql  oracle_lab8.sql  postgres_lab11.sql  postgres_lab2.sql  postgres_lab6.sql  postgres_lab7.sql  postgres_lab9.sql  university.sql
Python/: Lab01.py  tutorial.json
SQL/: README.md
learning-react-with-typescript/: package-lock.json  package.json
react-app/: package-lock.json
shellScripting/: greeting.sh
typeScript/: functions.ts  generics.ts  interface.ts  literals.ts  practice.js  practice.ts  tempCodeRunnerFile.ts
typescript/: README
(+449 files in other folders)
